fixed message conditional and added some extra fancieness

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -19,7 +19,7 @@
       </div>
       <div id="footer">
         <div id="input">
-          <input id="message" type="text" placeholder="Message" readonly/>
+          <input id="message" type="text" placeholder="Message" autocomplete="off" disabled/>
         </div>
         <div id="send">Start</div>
       </div>
