--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="thesocket"><a href="http://aleatorio.net">Aleatorio.net</a></p>
+        <p id="thesocket"><a href="https://aleatorio.net">Aleatorio.net</a></p>
       </div>
       <div id="chat-window">
         <div id="feedback"></div>
@@ -22,7 +22,7 @@
         <div id="input">
           <input id="message" type="text" placeholder="Message" autocomplete="off" disabled/>
         </div>
-        <div id="send">Start</div>
+        <div id="send">Searching</div>
       </div>
     </div>
     <script src="chat.js"></script>
