--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aleatorio</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.1/socket.io.min.js"></script>
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>This site is under construction</h1>
+    <div id="wrapper">
+      <div id="header">
+        <p id="title"><a href="">Aleatorio.net</a></p>
+      </div>
+      <div id="content">
+        <div id="par1"></div>
+        <div id="button-container">
+          <a href="https://aleatorio.net/chat"><div id="start-button">Start a chat!</div></a>
+        </div>
+        <div id="par2"></div>
+      </div>
+      <div id="footer">
+        <p>Made in the <a href="https://www.google.com/search?q=the+netherlands">Netherlands</a> ♥</p>
+      </div>
+    </div>
   </body>
 </html>
