--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div id="par2"></div>
       </div>
       <div id="footer">
-        <p>Made in the <a href="https://www.google.com/search?q=the+netherlands" target="_blank">Netherlands</a> ♥</p>
+        <p>Made in <a href="https://www.google.com/search?q=the+Netherlands" target="_blank">the Netherlands</a> ♥</p>
       </div>
     </div>
   </body>
