--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="random, chat, aleatorio">
+    <meta name="description" content="
+      Aleatorio is a website where you can chat with random people on the internet.
+       All conversation are one-to-one and none of your data is saved. Also available on mobile view.">
+    <meta name="author" content="Chris">
     <title>Aleatorio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.1/socket.io.min.js"></script>
     <link rel="stylesheet" href="styles.css"/>
