--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Chris">
     <title>Aleatorio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.1/socket.io.min.js"></script>
+    <link rel="canonical" href="https://aleatorio.net/"/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
