--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aleatorio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.1/socket.io.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
@@ -19,10 +20,11 @@
         <div id="output"></div>
       </div>
       <div id="footer">
+        <div id="send">Searching</div>
         <div id="input">
           <input id="message" type="text" placeholder="Message" autocomplete="off" disabled/>
         </div>
-        <div id="send">Searching</div>
+        
       </div>
     </div>
     <script src="chat.js"></script>
