Improved chat box somewhat in case of overflow

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -22,9 +22,11 @@
       <div id="footer">
         <div id="send">Searching</div>
         <div id="input">
-          <input id="message" type="text" placeholder="Message" autocomplete="off" disabled/>
+          <div id="messageContainer">
+            <div id="message" type="text" spellcheck="false" autofocus>Message</div>
+          </div>
         </div>
-        
+
       </div>
     </div>
     <script src="chat.js"></script>
