changed chat index to redirect to free domain

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="thesocket"><a href="https://aleatorio.net">Aleatorio.net</a></p>
+        <p id="thesocket"><a href="http://naitzirch.ddns.net">Aleatorio.net</a></p> <!-- htpps://aleatorio.net -->
       </div>
       <div id="chat-window">
         <div id="feedback"></div>
