--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <div id="content">
         <div id="par1"></div>
         <div id="button-container">
-          <a href="https://naitzirch.ddns.net/chat/"><div id="start-button">Start a chat!</div></a>
+          <a href="http://naitzirch.ddns.net/chat/"><div id="start-button">Start a chat!</div></a>
         </div>
         <div id="par2"></div>
       </div>
