--- a/public/aleatorio/stats/index.html
+++ b/public/aleatorio/stats/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 id="nbUsers">Test</h1>
+    <h1 id="nbUsers">0</h1>
     <script src="stats.js"></script>
   </body>
 </html>
