fixed urls in html

--- a/public/aleatorio/index.html
+++ b/public/aleatorio/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="
       Aleatorio is a website where you can chat with random people on the internet.
        All conversation are one-to-one and none of your data is saved. Also available on mobile view.">
-    <meta name="author" content="Chris">
+    <meta name="author" content="Naitzirch">
     <title>Aleatorio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.1/socket.io.min.js"></script>
-    <link rel="canonical" href="https://aleatorio.net/"/>
+    <link rel="canonical" href="https://nait.dev/"/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
@@ -18,12 +18,12 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="title"><a href="">Aleatorio.net</a></p>
+        <p id="title"><a href="nait.dev/aleatorio">Aleatorio.net</a></p>
       </div>
       <div id="content">
         <div id="par1"></div>
         <div id="button-container">
-          <a href="http://naitzirch.ddns.net/chat/"><div id="start-button">Start a chat!</div></a>
+          <a href="http://nait.dev/chat/"><div id="start-button">Start a chat!</div></a>
         </div>
         <div id="par2"></div>
       </div>
