--- a/public/aleatorio/chat/index.html
+++ b/public/aleatorio/chat/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="thesocket"><a href="http://naitzirch.ddns.net">Aleatorio.net</a></p> <!-- htpps://aleatorio.net -->
+        <p id="thesocket"><a href="http://nait.dev/aleatorio">Aleatorio.net</a></p>
       </div>
       <div id="chat-window">
         <div id="feedback"></div>
