fixed urls again

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="thesocket"><a href="http://nait.dev/aleatorio">Aleatorio.net</a></p>
+        <p id="thesocket"><a href="https://nait.dev">Aleatorio.net</a></p>
       </div>
       <div id="chat-window">
         <div id="feedback"></div>
