--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <p id="title"><a href="nait.dev/aleatorio">Aleatorio.net</a></p>
+        <p id="title"><a href="nait.dev">Aleatorio.net</a></p>
       </div>
       <div id="content">
         <div id="par1"></div>
         <div id="button-container">
-          <a href="http://nait.dev/chat/"><div id="start-button">Start a chat!</div></a>
+          <a href="https://nait.dev/chat/"><div id="start-button">Start a chat!</div></a>
         </div>
         <div id="par2"></div>
       </div>
